--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>One-column full-width responsive layout</title>
+		<title>SkillSleeves</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="Description" lang="en" content="ADD SITE DESCRIPTION">
 		<meta name="author" content="ADD AUTHOR INFORMATION">
@@ -24,9 +24,10 @@
 		<div class="nav-bar">
 			<div class="container">
 				<ul class="nav">
-					<li><a href="#">Nav item 1</a></li>
-					<li><a href="#">Nav item 2</a></li>
-					<li><a href="#">Nav item 3</a></li>
+					<li><a href="#">Source Materials</a></li>
+					<li><a href="#">The Sleeves</a></li>
+					<li><a href="#">Electronics</a></li>
+					<li><a href="#">People</a></li>
 				</ul>
 			</div>
 		</div>
