--- a/materials.html
+++ b/materials.html
@@ -18,16 +18,15 @@
 	<body>
 		<div class="header">
 			<div class="container">
-				<h1 class="header-heading">Sitename</h1>
+				<h1 class="header-heading">SkillSleeves</h1>
 			</div>
 		</div>
 		<div class="nav-bar">
 			<div class="container">
 				<ul class="nav">
 					<li><a href="materials.html">Source Materials</a></li>
-					<li><a href="#">The Sleeves</a></li>
-					<li><a href="#">Electronics</a></li>
-					<li><a href="#">People</a></li>
+					<li><a href="index.html">The Sleeves</a></li>
+					<li><a href="people.html">People</a></li>
 				</ul>
 			</div>
 		</div>
