--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
 		<div class="content">
 			<div class="container">
 				<div class="main">
-					<h1>Page title</h1>
+					<h1>Sleeve 1 - The Compress Sleeve</h1>
+					<p><img class="img-responsive" src="assets/img/sleeve1_web.jpg" alt=""></p>
+					<hr>
+					<h1>Sleeve 2 - The Taylored Sleeve</h1>
+					<p><img class="img-responsive" src="assets/img/sleeve2a_web.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/sleeve2b_web.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/sleeve2c_web.jpg" alt=""></p>
+					<hr>
+					<h1>Sleeve 2 - The Taylored Sleeve</h1>
+					<p><img class="img-responsive" src="assets/img/sleeve3_web.jpg" alt=""></p>
 					<hr>
 
 					<!-- Heading levels -->
