--- a/index.html
+++ b/index.html
@@ -37,15 +37,22 @@
 				
 					<h1>Sleeve 1 - The Compress Sleeve</h1>
 					<p><img class="img-responsive" src="assets/img/sleeve1_web.jpg" alt=""></p>
-					<p>Some text</p>
+					<p><b>The Calibration Sleeve</b>. This was the first wearable full-sleeve of electrodes for EMS for HCI. (1) The sleeve was
+constructed by individually sewing electrodes into the base fabric, (2) to form a dense grid of electrodes. (3) The high number
+of electrodes created wiring complexity. (4) The sleeve was designed to support donning and removal of the sleeve by the
+individual.</p>
 					<hr>
 					<h1>Sleeve 2 - The Taylored Sleeve</h1>
 					<p><img class="img-responsive" src="assets/img/sleeve2a_web.jpg" alt=""></p>
-					<p>Some text</p>
+					<p>the Manufacturing Sleeve. (1) Determining muscle locations across multiple users. (2) Planning electrode
+layout to cover broad range of muscle locations. (3) Testing different electrode designs. (</p>
 					<p><img class="img-responsive" src="assets/img/sleeve2b_web.jpg" alt=""></p>
-					<p>Some text</p>
+					<p>(4) Laser cutting fabric. (5) Ironing fabric
+layers together. (6) Layering multiple fabric layers</p>
 					<p><img class="img-responsive" src="assets/img/sleeve2c_web.jpg" alt=""></p>
-					<p>Some text</p>
+					<p>(7) Using a string-based, corset-esque fastening technique. (8) Showcasing
+electrode placement on a mannequin. (9) The final Manufacturing Sleeve (outside). (10) The inside of the Manufacturing Sleeve.
+(11) The final fastening configuration of the Manufacturing Sleeve.</p>
 					<a href="index.html">Design Files</a>
 					<hr>
 					<h1>Sleeve 2 - The Taylored Sleeve</h1>
