--- a/people.html
+++ b/people.html
@@ -24,7 +24,7 @@
 		<div class="nav-bar">
 			<div class="container">
 				<ul class="nav">
-					
+					<li><a href="wearability.html">Wearability</a></li>
 					<li><a href="index.html">The Sleeves</a></li>
 					<li><a href="people.html">People</a></li>
 				</ul>
