--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ individual.</p>
 					<hr>
 					<h1>Sleeve 2 - The Taylored Sleeve</h1>
 					<p><img class="img-responsive" src="assets/img/sleeve2a_web.jpg" alt=""></p>
-					<p>the Manufacturing Sleeve. (1) Determining muscle locations across multiple users. (2) Planning electrode
+					<p><b>The Manufacturing Sleeve</b>. (1) Determining muscle locations across multiple users. (2) Planning electrode
 layout to cover broad range of muscle locations. (3) Testing different electrode designs. (</p>
 					<p><img class="img-responsive" src="assets/img/sleeve2b_web.jpg" alt=""></p>
 					<p>(4) Laser cutting fabric. (5) Ironing fabric
@@ -57,7 +57,9 @@ electrode placement on a mannequin. (9) The final Manufacturing Sleeve (outside)
 					<hr>
 					<h1>Sleeve 2 - The Taylored Sleeve</h1>
 					<p><img class="img-responsive" src="assets/img/sleeve3_web.jpg" alt=""></p>
-					<p>Some text</p>
+					<p><b>The Typing Sleeve</b>. (1) This sleeve features an array of 20 small electrodes in a grid-like pattern, with fabric traces
+routing primarily between layers of base fabric. (2) The sleeve also features a large wrist ground electrode, and two palm
+electrodes on a half glove. (3) Cummerbund and d-ring fasteners are used to fasten the sleeve to the arm.</p>
 					<a href="index.html">Design Files</a>
 					<hr>
 
@@ -67,7 +69,7 @@ electrode placement on a mannequin. (9) The final Manufacturing Sleeve (outside)
 		</div>
 		<div class="footer">
 			<div class="container">
-				&copy; Copyright 2015
+				
 			</div>
 		</div>
 	</body>
