--- a/wearability.html
+++ b/wearability.html
@@ -36,7 +36,7 @@
 					<h1>Page title</h1>
 					<hr>
 
-
+<p><img class="img-responsive" src="assets/img/wearability.png" alt=""></p>
 					<!-- Tables -->
 					<h3>Tables</h3>
 					<p>Tables should be given the class of <code>table</code>.</p>
