--- a/wearability.html
+++ b/wearability.html
@@ -36,7 +36,7 @@
 					<h1>Page title</h1>
 					<hr>
 
-<p><img class="img-responsive" src="assets/img/wearability.png" alt=""></p>
+<p><img class="img-responsive-smaller" src="assets/img/wearability.png" alt=""></p>
 					<!-- Tables -->
 					<h3>Tables</h3>
 					<p>Tables should be given the class of <code>table</code>.</p>
@@ -54,21 +54,26 @@
 
 								<td>Technology</td>
 								<td>Function</td>
-								<td>Where should an antenna be placed so that it is not shielded by the body? How
-can skin contact of an EMG electrode be ensured</td>
+								<td>Where should an antenna be placed so that it is not shielded by the body? How can skin contact of an EMG electrode be ensured</td>
 							</tr>
 							<hr>
 							<tr>
 
-								<td>Jacob</td>
-								<td>Thornton</td>
-								<td>@fat</td>
+								<td> </td>
+								<td>Information</td>
+								<td>Where should an accelerometer be placed to collect the most information? What is the ideal location for measuring blood oxygen levels?</td>
 							</tr>
 							<tr>
 
-								<td>Larry</td>
-								<td>the Bird</td>
-								<td>@twitter</td>
+								<td>Sensorimotor</td>
+								<td>Psychophysical</td>
+								<td>How much attention does the device demand when worn? Does it start irritating the user after prolonged use?</td>
+							</tr>
+							<tr>
+
+								<td> </td>
+								<td>Biomechanical</td>
+								<td>Does the device inhibit the range of motion of the user? Can the user reach the device?</td>
 							</tr>
 						</tbody>
 					</table>
