added link to paper

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="main">
 				
 				<h1>Skill-Sleeves: Designing Electrode Garments for Wearability</h1>
-				    <p>This is the companion website to our TEI2021 paper. You can find it in the <a href="https://dl.acm.org/doi/10.1145/3430524.3440652">ACM Digital Library</a> or you can download a copy here.</p>
+				    <p>This is the companion website to our TEI2021 paper. You can find it in the <a href="https://dl.acm.org/doi/10.1145/3430524.3440652">ACM Digital Library</a> or you can <a href="assets/materials/TEI_2021_SkillSleeves.pdf">download a copy here</a>.</p>
 					<p><i>Please cite as</i>:</p>
 					<p>Jarrod Knibbe, Rachel Freire, Marion Koelle, and Paul Strohmeier. 2021. Skill-Sleeves: Designing Electrode Garments for Wearability. In Proceedings of the Fifteenth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '21). Association for Computing Machinery, New York, NY, USA, Article 33, 1–16. DOI:https://doi.org/10.1145/3430524.3440652 </p>
 
