--- a/people.html
+++ b/people.html
@@ -24,8 +24,9 @@
 		<div class="nav-bar">
 			<div class="container">
 				<ul class="nav">
+					<li><a href="index.html">Home</a></li>
 					<li><a href="wearability.html">Wearability</a></li>
-					<li><a href="index.html">The Sleeves</a></li>
+					<li><a href="sleeves.html">The Sleeves</a></li>
 					<li><a href="people.html">People</a></li>
 				</ul>
 			</div>
