--- a/wearability.html
+++ b/wearability.html
@@ -34,9 +34,9 @@
 		<div class="content">
 			<div class="container">
 				<div class="main">
-					<h1>Page title</h1>
+					<h1>Wearability</h1>
 					<hr>
-
+					<p>Based on the literature we identified a number of different focuses used when discussing wearability. These included Technology, Sensorimotor Systems, Human Abilities, and Social perspectives. Through our own practice we also identified Deployability, Manufacturing, and Customization as features of wearability we care about. In our paper and our presentation we analyze our work according to these criteria. In the image below Human Abilities are placed away from the others as these criteria do not apply to our own work. In the table below "new" perspectives are markes with an asterisk (*). </p>
 					<p><img class="img-responsive-smaller" src="assets/img/wearability.png" alt=""></p>
 					<!-- Tables -->
 					<h3>Tables</h3>
