Adding content throughout

--- a/people.html
+++ b/people.html
@@ -34,118 +34,28 @@
 		<div class="content">
 			<div class="container">
 				<div class="main">
-					<h1>Page title</h1>
-					<hr>
+					<p>We are the 4 primary authors of this work:</p>
 
-					<!-- Heading levels -->
-					<h1>Heading level 1</h1>
-					<h2>Heading level 2</h2>
-					<h3>Heading level 3</h3>
-					<h4>Heading level 4</h4>
-					<h5>Heading level 5</h5>
-					<h6>Heading level 6</h6>
-					<hr>
+					<h2>Jarrod Knibbe</h2>
+					<p>I'm a lecturer at the University of Melbourne. I have a special interest in Electric Muscle Stimulation (EMS). Much of my prior work has explored how to make multi-electrode setups 'work', especially by trying to solve the associated calibration problems. See, for example, the below papers:</p>
 
-					<!-- Paragraphs -->
-					<h3>Paragraphs</h3>
-					<p>Ut wisi enim ad minim veniam, <a href="#">quis nostrud exerci tation ullamcorper</a> suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-					<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-					<hr>
+					<p>Graeme Gange and Jarrod Knibbe, <a href=https://www.aaai.org/AAAI21Papers/AAAI-8542.GangeG.pdf>Optimising Automatic Calibration of Electric Muscle Stimulation</a>, AAAI 2021 (final version to appear soon)</p>
 
-					<!-- Responsive images -->
-					<h3>Responsive images</h3>
-					<p>For images to be responsive (so that they will rescale to suit the width of the parent, use the <code>.img-responsive</code> class.</p>
-					<p><img class="img-responsive" src="http://placehold.it/800x350" alt=""></p>
+					<p>Jarrod Knibbe, Paul Strohmeier, Sebastian Boring, and Kasper Hornbaek, <a href=https://dl.acm.org/doi/abs/10.1145/3130933>Automatic Calibration of High-density Electric Muscle Stimulation</a>, in IMWUT 2017.</p>
 
-					<!-- Lists -->
-					<h3>Unordered list</h3>
-					<p>Unordered lists are used to markup lists where list items do not require numbering.</p>
-					<ul>
-						<li>Ut wisi enim ad minim veniam</li>
-						<li>Quis nostrud exerci tation</li>
-						<li>Lamcorper suscipit lobortis nis</li>
-						<li>Ut aliquip ex ea commodo consequat</li>
-						<li>Duis autem vel eum iriure dolor</li>
-					</ul>
-					<hr>
+					<p>Henning Pohl, Kasper Hornbaek, and Jarrod Knibbe, <a href=https://dl.acm.org/doi/abs/10.1145/3174910.3174948>Wanding Through Space: Interactive Calibration for Electric Muscle Stimulation</a>, in AH 2018.</p>
 
-					<h3>Ordered list</h3>
-					<p>Ordered lists are used to markup lists where list items require numbering.</p>
-					<ol>
-						<li>Hendrerit in vulputate velit esse</li>
-						<li>Olestie consequat</li>
-						<li>Vel illum dolore eu feugiat</li>
-						<li>Nulla facilisis at vero eros</li>
-						<li>Accumsan et iusto odio</li>
-					</ol>
-					<hr>
+					<h2>Rachel Freire</h2>
+					<p>I run my own studio, Freire Studios, in London, UK. While much of my interest has been in fashion and costume design, I have always been especially interested in electronic textiles and how to incorporate electronics into my art. I have collaborated with Paul, and increasingly Jarrod, extensively. For example, at TEI a couple of years ago, we ran a <a href=https://dl.acm.org/doi/abs/10.1145/3173225.3173331>3D tailoring workshop</a>.</p>
 
-					<h3>Unstyled list</h3>
-					<p>You can make the list unstyled using the <code>list-unstyled</code> class.</p>
-					<ul class="list-unstyled">
-						<li>Ut wisi enim ad minim veniam</li>
-						<li>Quis nostrud exerci tation</li>
-						<li>Lamcorper suscipit lobortis nis</li>
-						<li>Ut aliquip ex ea commodo consequat</li>
-						<li>Duis autem vel eum iriure dolor</li>
-					</ul>
-					<hr>
+					<h2>Marion Koelle</h2>
+					<p>I'm a post doc in Saarbrucken. My interest is in the social acceptability of wearables. Check out some of my other work:</p>
 
-					<h3>Inline list</h3>
-					<p>You can make the list display inline using the <code>list-inline</code> class.</p>
-					<ul class="list-inline">
-						<li>One</li>
-						<li>Two</li>
-						<li>Three</li>
-						<li>Four</li>
-					</ul>
-					<hr>
+					<h2>Paul Strohmeier</h2>
+					<p>I build wearables and haptics and stuff. Everyone should read my PhD thesis: <a href=http://www.embodimentlabs.org/papers/2019_PhDThesis_Strohmeier.pdf>Shaping Material Experiences: Designing Vibrotactile Feedback for Active Perception</a>. (Jarrod wrote this - seriously, though, worth a read.)</p>
 
-					<!-- Blockquotes -->
-					<h3>Blockquotes</h3>
-					<p>The blockquote element is used to markup long quotations. Ideally, content inside should be wrapped in paragraph elements.</p>
-					<blockquote>
-						<p>The real names of our people were destroyed during slavery. The last name of my forefathers was taken from them when they were brought to America and made slaves, and then the name of the slave master was given, which we refuse, we reject that name today and refuse it. I never acknowledge it whatsoever.</p>
-						<footer><a href="http://en.wikipedia.org/wiki/Malcolm_X">Malcolm X</a></footer>
-					</blockquote>
-					<hr>
-
-					<h3>Buttons</h3>
-					<p>You can apply the <code>btn</code> class to any element that requires a button style.</p>
-					<p><a href="#" class="btn">Submit</a></p>
-					<hr>
-
-					<!-- Tables -->
-					<h3>Tables</h3>
-					<p>Tables should be given the class of <code>table</code>.</p>
-					<table class="table table-striped">
-						<thead>
-							<tr>
-								<th>#</th>
-								<th>First Name</th>
-								<th>Last Name</th>
-								<th>Username</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th scope="row">1</th>
-								<td>Mark</td>
-								<td>Otto</td>
-								<td>@mdo</td>
-							</tr>
-							<tr>
-								<th scope="row">2</th>
-								<td>Jacob</td>
-								<td>Thornton</td>
-								<td>@fat</td>
-							</tr>
-							<tr>
-								<th scope="row">3</th>
-								<td>Larry</td>
-								<td>the Bird</td>
-								<td>@twitter</td>
-							</tr>
+					<p>Realistically, however, this work has been many years in the making and has also involved numerous other collaborators. Special thanks to: Kasper Hornbaek, Elliott Wilson, Sam Trolland, Jaehyun Shin, Melanie Huang, and Gerard Mason.</p>
+					
 						</tbody>
 					</table>
 				</div>
