Added electronics photo placeholder

--- a/people.html
+++ b/people.html
@@ -37,7 +37,7 @@
 					<p>We are the 4 primary authors of this work:</p>
 
 					<h2>Jarrod Knibbe</h2>
-					<p>I'm a lecturer at the University of Melbourne. I have a special interest in Electric Muscle Stimulation (EMS). Much of my prior work has explored how to make multi-electrode setups 'work', especially by trying to solve the associated calibration problems. See, for example, the below papers:</p>
+					<p>I'm a lecturer at the <a href=https://findanexpert.unimelb.edu.au/profile/860467-jarrod-knibbe>University of Melbourne</a>. I have a special interest in Electric Muscle Stimulation (EMS). Much of my prior work has explored how to make multi-electrode setups 'work', especially by trying to solve the associated calibration problems. See, for example, the below papers:</p>
 
 					<p>Graeme Gange and Jarrod Knibbe, <a href=https://www.aaai.org/AAAI21Papers/AAAI-8542.GangeG.pdf>Optimising Automatic Calibration of Electric Muscle Stimulation</a>, AAAI 2021 (final version to appear soon)</p>
 
