--- a/sleeves.html
+++ b/sleeves.html
@@ -60,6 +60,7 @@
 
 					<h3>Electronics</h3>
 					<p>We make no contribution around electronics in this paper, but are beginning to work on attempting to improve wearability in this space, too. Below is an image of our current 24-channel EMS+EMG electronics stack, which we use for driving the typing sleeve. It's not terribly wearable. We would be happy to share the design, so please <a href="people.html">get in touch</a> if you'd like to discuss.</p>
+					<p><img class="img-responsive-smaller" src="assets/img/electronics.jpg" alt=""></p>
 
 					
 				</div>
