Added Marion's link

--- a/people.html
+++ b/people.html
@@ -49,7 +49,7 @@
 					<p>I run my own studio, Freire Studios, in London, UK. While much of my interest has been in fashion and costume design, I have always been especially interested in electronic textiles and how to incorporate electronics into my art. I have collaborated with Paul, and increasingly Jarrod, extensively. For example, at TEI a couple of years ago, we ran a <a href=https://dl.acm.org/doi/abs/10.1145/3173225.3173331>3D tailoring workshop</a>.</p>
 
 					<h2>Marion Koelle</h2>
-					<p>I'm a post doc in Saarbrucken. My interest is in the social acceptability of wearables. Check out some of my other work:</p>
+					<p>I'm a post doc in Saarbrucken. My interest is in the social acceptability of wearables. Check out some of my other work on <a href=https://www.marionkoelle.de>my website</a></p>
 
 					<h2>Paul Strohmeier</h2>
 					<p>I build wearables and haptics and stuff. Everyone should read my PhD thesis: <a href=http://www.embodimentlabs.org/papers/2019_PhDThesis_Strohmeier.pdf>Shaping Material Experiences: Designing Vibrotactile Feedback for Active Perception</a>. (Jarrod wrote this - seriously, though, worth a read.)</p>
