--- a/people.html
+++ b/people.html
@@ -46,10 +46,14 @@
 					<p>Henning Pohl, Kasper Hornbaek, and Jarrod Knibbe, <a href=https://dl.acm.org/doi/abs/10.1145/3174910.3174948>Wanding Through Space: Interactive Calibration for Electric Muscle Stimulation</a>, in AH 2018.</p>
 
 					<h2>Rachel Freire</h2>
-					<p>I run my own studio, Freire Studios, in London, UK. While much of my interest has been in fashion and costume design, I have always been especially interested in electronic textiles and how to incorporate electronics into my art. I have collaborated with Paul, and increasingly Jarrod, extensively. For example, at TEI a couple of years ago, we ran a <a href=https://dl.acm.org/doi/abs/10.1145/3173225.3173331>3D tailoring workshop</a>.</p>
+					<p>I run my own studio, <a href=https://www.rachelfreire.com/>Freire Studios</a>, in London, UK. While much of my interest has been in fashion and costume design, I have always been especially interested in electronic textiles and how to incorporate electronics into my art. I have collaborated with Paul, and increasingly Jarrod, extensively. For example, at TEI a couple of years ago, we ran a <a href=https://dl.acm.org/doi/abs/10.1145/3173225.3173331>3D tailoring workshop</a>.</p>
+					<p>(Jarrod wrote that too :-P.)</p>
+					<p>Rachel has also collaborated with Imogen Heap and worked on a plethora of films, including Dune and Guardians of the Galaxy<p>
 
 					<h2>Marion Koelle</h2>
-					<p>I'm a post doc in Saarbrucken. My interest is in the social acceptability of wearables. Check out some of my other work on <a href=https://www.marionkoelle.de>my website</a></p>
+					<p>I’m a post-doctoral researcher at Saarland Informatics Campus. My research is primarily around how we use technology in social context. I am mostly fascinated by wearables and on-body interfaces, because from a social perspective they are both private (e.g., intimate) and public (e.g. visible to others), which creates an interesting tension. In the past years I have published several papers on social acceptability (which you should check out!). A good starting point is our overview paper:<a href=https://dl.acm.org/doi/10.1145/3313831.3376162> Social Acceptability in HCI: A Survey of Methods, Measures, and Design Strategies </a>. In CHI 2020. </p>
+
+Check out some of my other work on my website (Link is there already) <a href=https://www.marionkoelle.de>my website</a></p>
 
 					<h2>Paul Strohmeier</h2>
 					<p>I build wearables and haptics and stuff. Everyone should read my PhD thesis: <a href=http://www.embodimentlabs.org/papers/2019_PhDThesis_Strohmeier.pdf>Shaping Material Experiences: Designing Vibrotactile Feedback for Active Perception</a>. (Jarrod wrote this - seriously, though, worth a read.)</p>
