--- a/people.html
+++ b/people.html
@@ -53,7 +53,7 @@
 					<h2>Marion Koelle</h2>
 					<p>I’m a post-doctoral researcher at Saarland Informatics Campus. My research is primarily around how we use technology in social context. I am mostly fascinated by wearables and on-body interfaces, because from a social perspective they are both private (e.g., intimate) and public (e.g. visible to others), which creates an interesting tension. In the past years I have published several papers on social acceptability (which you should check out!). A good starting point is our overview paper:<a href=https://dl.acm.org/doi/10.1145/3313831.3376162> Social Acceptability in HCI: A Survey of Methods, Measures, and Design Strategies </a>. In CHI 2020. </p>
 
-Check out some of my other work on my website (Link is there already) <a href=https://www.marionkoelle.de>my website</a></p>
+Check out some of my other work on <a href=https://www.marionkoelle.de>my website</a></p>
 
 					<h2>Paul Strohmeier</h2>
 					<p>I build wearables and haptics and stuff. Everyone should read my PhD thesis: <a href=http://www.embodimentlabs.org/papers/2019_PhDThesis_Strohmeier.pdf>Shaping Material Experiences: Designing Vibrotactile Feedback for Active Perception</a>. (Jarrod wrote this - seriously, though, worth a read.)</p>
