Cleaned up the wearability table

--- a/wearability.html
+++ b/wearability.html
@@ -59,7 +59,7 @@
 							<tr class="subrow">
 								<td>Technology</td>
 								<td>Function</td>
-								<td>Where should an antenna be placed so that it is not shielded by the body? How can skin contact of an EMG electrode be ensured</td>
+								<td>Where should an antenna be placed so that it is not shielded by the body? How can skin contact of an EMG electrode be ensured?</td>
 							</tr>
 								<!-- <tt /> -->
 							<tr>
@@ -86,7 +86,7 @@
 								<td>Perception</td>
 								<td>Does the device provide output which the user can interpret?</td>
 							</tr>
-							<tr>
+							<tr class="subrow">
 
 								<td> </td>
 								<td>Reaction Time</td>
